26/ Removed Legacy Boss Rush mode and anything that related that can't be reused.
27/ Merged Roguelike Mode with World gen test config.
28/ Removed massive StaticNoise png and using 255x255 one instead.
29/ Small fixes toward boss rush mode missing exotic teleporter.
30/ Fixed localization error.
31/ Removed unused mechanic, dying in classic mode no longer drop boss spawner again.
32/ Removed Enchantment config from luck department.
33/ Removed Curses system.
34/ Basic implementation of relic set system.
35/ Removed Trinket Spoil and Lost Acc from spoil.
36/ Removed Trinket and Lost Acc lib in ModItemLib.
37/ Removed RPG altar, RPG field and any mention of RPG.
38/ Removed Overpowering Gem and made it into a relic set.
39/ Removed Fury Emblem and made it into a artifact instead.
40/ Removed Titan Blood and made it into a relic set.
41/ Removed Divinity Stone and Blood stone, merged them into Nature of Good and Evil and turn it into a relic set.
42/ Removed BloodThorn core acc and turn it into a perk.
43/ Reverted Nature Crystal back to normal acc item and give the item old effects.
44/ Added Heart Of Nature relic set.
45/ Adjusted HP condition for when KS created a crown from 40% to 67%.
46/ Massively increases bosses base HP.
47/ Deleted Legendary Wood Sword perk.
48/ Removed Killing Thrill and made it into a relic set.
49/ Deleted Plantera Essence and anything that related to it.
50/ Changed Pocket Portal from spawning friendly NPC to spawning boss Betsy.
51/ Removed Spirit Emblem and made it into a relic set.
52/ Adjusted Godborn dice, no longer a lost accessory and instead a legacy item
53/ Removed Spectre Quiver and made it into a relic set.
54/ Removed Starfell Stone and made it into a relic set.
55/ Changed Light Speed Round from accessory type to ammo type.
56/ Changed Fragment Round from accessory type to ammo type.
57/ Changed MagicMuzzle to Arcane Round and from accessory type to ammo type
58/ Adjusted enemy stats scaling.